add HTML, CSS, IMG

--- a/ilmostrodifirenze.html
+++ b/ilmostrodifirenze.html
@@ -10,6 +10,8 @@
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Bayon&display=swap" rel="stylesheet">
 <link href="https://fonts.googleapis.com/css2?family=Be+Vietnam+Pro:wght@300&display=swap" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css2?family=Be+Vietnam+Pro:wght@600&display=swap" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css2?family=Be+Vietnam+Pro:ital,wght@1,300&display=swap" rel="stylesheet">
 </head>
 
 <body class="bd2">
@@ -47,7 +49,7 @@
                     <a href="sweeneytodd.html">Sweeney Todd</a>
                   </div>
                 </div>
-            <a href="aboutus.html">About us</a>
+            
             <a href="javascript:void(0);" class="icon" onclick="myFunction()">&#9776;</a>
           </div>
           <script>
@@ -220,7 +222,6 @@
     </h3>
     <p>Nato a Montefiridolfi l'8 novembre del 1932 era amico dei tre "compagni di merende", con una invalidità civile riconosciuta nel 1983 per oligofrenia, e fu un teste decisivo nella vicenda e nelle condanne ai "compagni di merende". Depose contro Pacciani e Vanni come testimone oculare degli ultimi due omicidi e raccontò di averli visti sul luogo del delitto uccidere la coppia di campeggiatori.</p>
     <p>Le dichiarazioni di Pucci hanno lasciato dei dubbi, il teste è arrivato a parlare per gradi, all'inizio appariva reticente. Inoltre in aula la difesa ha cercato di inficiarne le dichiarazioni, essendo il teste fondamentale nel corroborare le chiamate in correo di Lotti. Fernando Pucci morì il 25 febbraio 2017, all'età di 84 anni.</p>
-    <p></p>
     <hr>
     <h3>
         Giovanni Faggi
@@ -235,7 +236,13 @@
     <p>Le sentenze che condannano i "compagni di merende" si basano principalmente sulle tanto discusse testimonianze di Pucci e, soprattutto, di Lotti. Ciò ha impedito l'individuazione di un movente certo, organico e globale, che fosse valido per tutti i delitti. Nel 2010 Pier Luigi Vigna, ex procuratore di Firenze occupatosi del caso, si è dichiarato scettico sull'esistenza di un possibile secondo livello di mandanti, a dimostrazione del fatto che le inchieste successive a quelle dei "compagni di merende" non abbiano avuto sviluppi. Anche Piero Tony, sostituto procuratore generale al processo d'appello contro Pacciani, definì ironicamente aria fritta l'ipotesi dei mandanti.</p>
 </main>
 <footer>
-    <hr>
-</footer>
+    <nav>
+      <div class="topnav" id="myTopnav">
+          <a href="index.html" class="active">MAD(IN)ESS</a>
+          <div class="dropdown">
+          <a href="aboutus.html">About us</a>
+      </div>
+    </nav>
+  </footer>
 </body>
 </html>
