--- a/jeffreydahmer.html
+++ b/jeffreydahmer.html
@@ -10,6 +10,8 @@
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Bayon&display=swap" rel="stylesheet">
 <link href="https://fonts.googleapis.com/css2?family=Be+Vietnam+Pro:wght@300&display=swap" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css2?family=Be+Vietnam+Pro:wght@600&display=swap" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css2?family=Be+Vietnam+Pro:ital,wght@1,300&display=swap" rel="stylesheet">
 </head>
 
 <body class="bd2">
@@ -47,7 +49,6 @@
                     <a href="sweeneytodd.html">Sweeney Todd</a>
                   </div>
                 </div>
-            <a href="aboutus.html">About us</a>
             <a href="javascript:void(0);" class="icon" onclick="myFunction()">&#9776;</a>
           </div>
           <script>
@@ -117,7 +118,7 @@
   <div class="imgschede">
     <img src="immagini/Group 39.png" alt="">
     <div class="didascalie">
-    <p><i>Nel congelatore (a sinistra) gli investigatori  hanno scoperto un intero tronco e un sacchetto di organi umani;<br>nel fusto (a destra) di 200ml sono stati trovati altri tre torsi smembrati e dissoluti in una soluzione acida.</i></p>
+    <p><i>Congelatore (destra): un intero tronco e un sacchetto di organi umani;<br>fusto 200ml(sinistra): tre torsi smembrati e dissoluti in una soluzione acida.</i></p>
     <p><i>Congelatore nell’appartamento di Dahmer;<br>in alto a sinistra un teschio umano.</i></p>
   </div>
 </div>
@@ -148,7 +149,13 @@
 <p>Tutta l'operazione era documentata da Dahmer tramite varie fotografie che illustravano il processo in ogni singolo passo. Le parti asportate dai corpi venivano conservate in freezer come cibo, disciolte nell'acido, oppure messe in formaldeide. Alcune teste venivano invece bollite per rimuoverne la carne, lasciando il teschio nudo che veniva poi dipinto per farlo sembrare di plastica. Dahmer sottopose inoltre alcune vittime a esperimenti di lobotomia, iniettando nel loro cervello acido muriatico o acqua bollente tramite dei fori trapanati nel cranio, con l'apparente scopo di creare zombie, e provocando la morte dei malcapitati.</p>
 </main>
 <footer>
-    <hr>
+  <nav>
+    <div class="topnav" id="myTopnav">
+        <a href="index.html" class="active">MAD(IN)ESS</a>
+        <div class="dropdown">
+        <a href="aboutus.html">About us</a>
+    </div>
+  </nav>
 </footer>
 </body>
 </html>
