--- a/albertdesalvo.html
+++ b/albertdesalvo.html
@@ -10,6 +10,8 @@
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Bayon&display=swap" rel="stylesheet">
 <link href="https://fonts.googleapis.com/css2?family=Be+Vietnam+Pro:wght@300&display=swap" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css2?family=Be+Vietnam+Pro:wght@600&display=swap" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css2?family=Be+Vietnam+Pro:ital,wght@1,300&display=swap" rel="stylesheet">
 </head>
 
 <body class="bd2">
@@ -47,7 +49,7 @@
                     <a href="sweeneytodd.html">Sweeney Todd</a>
                   </div>
                 </div>
-            <a href="aboutus.html">About us</a>
+            
             <a href="javascript:void(0);" class="icon" onclick="myFunction()">&#9776;</a>
           </div>
           <script>
@@ -120,7 +122,13 @@ La giuria non credette che DeSalvo fosse lo Stupratore di Boston ma fu condannat
 </div>
 </main>
 <footer>
-    <hr>
+  <nav>
+    <div class="topnav" id="myTopnav">
+        <a href="index.html" class="active">MAD(IN)ESS</a>
+        <div class="dropdown">
+        <a href="aboutus.html">About us</a>
+    </div>
+  </nav>
 </footer>
 </body>
 </html>
