--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Bayon&display=swap" rel="stylesheet">
 <link href="https://fonts.googleapis.com/css2?family=Be+Vietnam+Pro:wght@300&display=swap" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css2?family=Be+Vietnam+Pro:wght@600&display=swap" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css2?family=Be+Vietnam+Pro:ital,wght@1,300&display=swap" rel="stylesheet">
 </head>
 
 <body>
@@ -48,7 +50,6 @@
                     <a href="sweeneytodd.html">Sweeney Todd</a>
                   </div>
                 </div>
-            <a href="aboutus.html">About us</a>
             <a href="javascript:void(0);" class="icon" onclick="myFunction()">&#9776;</a>
           </div>
           <script>
@@ -85,5 +86,14 @@
         </div>
     </div>
 </main>
+<footer>
+  <nav>
+    <div class="topnav" id="myTopnav">
+        <a href="index.html" class="active">MAD(IN)ESS</a>
+        <div class="dropdown">
+        <a href="aboutus.html">About us</a>
+    </div>
+  </nav>
+</footer>
 </body>
 </html>
