--- a/tedbundy.html
+++ b/tedbundy.html
@@ -11,6 +11,8 @@
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Bayon&display=swap" rel="stylesheet">
 <link href="https://fonts.googleapis.com/css2?family=Be+Vietnam+Pro:wght@300&display=swap" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css2?family=Be+Vietnam+Pro:wght@600&display=swap" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css2?family=Be+Vietnam+Pro:ital,wght@1,300&display=swap" rel="stylesheet">
 </head>
 
 <body class="bd2">
@@ -48,7 +50,7 @@
                     <a href="sweeneytodd.html">Sweeney Todd</a>
                   </div>
                 </div>
-            <a href="aboutus.html">About us</a>
+            
             <a href="javascript:void(0);" class="icon" onclick="myFunction()">&#9776;</a>
           </div>
           <script>
@@ -115,7 +117,13 @@ Un sadico sociopatico che traeva piacere dal dolore altrui e dal senso di potere
 <p>Almeno 4 vittime furono decapitate dopo la morte. In altri casi avvicinava la vittima spacciandosi per un poliziotto. In un'occasione si intrufolò nella camera di un dormitorio femminile e uccise a bastonate due studentesse e ne assalì una terza. Quasi tutte le vittime erano studentesse universitarie, minute e dai lunghi capelli scuri con la scriminatura centrale. Alcuni hanno sostenuto che Bundy cercasse ragazze simili alla sua ex fidanzata, in una sorta di "punizione simbolica" per la donna che l'aveva respinto.</p>
 </main>
 <footer>
-    <hr>
+  <nav>
+    <div class="topnav" id="myTopnav">
+        <a href="index.html" class="active">MAD(IN)ESS</a>
+        <div class="dropdown">
+        <a href="aboutus.html">About us</a>
+    </div>
+  </nav>
 </footer>
 </body>
 </html>
